added username next to tweets

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <h1>TWEETS</h1>
 
-<%= simple_form_for [ @tweet], id: "form-submit" do |f| %>
+<%= simple_form_for [ @user ,@tweet], id: "form-submit" do |f| %>
    <%= f.input :content, label: "Tweet" %>
    <%= f.button :submit, class: "btn btn-danger" %>
    <% end %>
@@ -12,7 +12,7 @@
     <li>
       <%= tweet.created_at.strftime("%B %d %Y, %l:%M%P") %> <br>
       <%= tweet.content %>
-      <%= tweet.user.username %>
+      <%= tweet.user.email %>
 
     </li>
   </ul>
