--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,5 @@
 .card {
-  height: 130px;
+  height: 149px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
@@ -8,6 +8,7 @@
   width: 500px;
   background-color: white;
   margin: auto;
+  margin-top:20px;
 }
 .card-user {
   position: absolute;
