--- a/app/assets/stylesheets/pages/tweets.scss
+++ b/app/assets/stylesheets/pages/tweets.scss
@@ -7,9 +7,14 @@ margin:auto;
 .title{
   text-align: center;
   text-decoration: underline;
+
 }
 
 .pages{
   text-align:center;
 
+}
+
+#tweets{
+  padding-bottom:30px;
 }
