--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,6 +9,10 @@
   background-color: white;
   margin: auto;
   margin-top:20px;
+  box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+
+
 }
 .card-user {
   position: absolute;
@@ -32,10 +36,11 @@
 .card-description h2 {
   font-size: 24px;
 }
-.card-description p {
+.card-description  p {
   font-size: 10px;
   opacity: 0.7;
   font-weight: lighter;
+
 
 }
 .card-link {
@@ -59,3 +64,17 @@
 .card-description h4 :hover{
   text-decoration: none;
 }
+
+i{
+  // padding-left: 10px;
+}
+
+.icons{
+display: flex;
+font-size: 13px;
+justify-content:space-between;
+:hover{
+  text-decoration:none;
+}
+}
+
