--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,80 +1,136 @@
-.card {
-  height: 149px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-size: cover !important;
-  background-position: center;
-  color: black;
+// .card {
+//   height: 149px;
+//   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+//   background-size: cover !important;
+//   background-position: center;
+//   color: black;
+//   position: relative;
+//   width: 500px;
+//   background-color: white;
+//   margin: auto;
+//   margin-top:20px;
+//   box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+//   border-radius: 10px;
+
+
+// }
+// .card-user {
+//   position: absolute;
+//   right: 10px;
+//   top: 10px;
+//   width: 40px;
+//   border-radius: 50%;
+// }
+// .card-category {
+//   position: absolute;
+//   top: 10px;
+//   left: 10px;
+//   font-size: 15px;
+//   text-transform: uppercase;
+// }
+// .card-description {
+//   position: absolute;
+//   bottom: 10px;
+//   left: 10px;
+// }
+// .card-description h2 {
+//   font-size: 24px;
+// }
+// .card-description  p {
+//   font-size: 10px;
+//   opacity: 0.7;
+//   font-weight: lighter;
+
+
+// }
+// .card-link {
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   width: 100%;
+//   z-index: 2;
+//   background: black;
+//   opacity: 0;
+// }
+// .card-link:hover {
+//   opacity: 0.1;
+// }
+
+// .card-description .tweet-content{
+//   font-size:20px;
+// }
+
+// .card-description h4 :hover{
+//   text-decoration: none;
+// }
+
+// i{
+//   // padding-left: 10px;
+// }
+
+// .icons{
+// display: flex;
+// font-size: 13px;
+// justify-content:space-between;
+
+// :hover{
+//   text-decoration:none;
+// }
+// }
+
+
+
+
+.card{
   position: relative;
+  background-color:white;
   width: 500px;
-  background-color: white;
-  margin: auto;
-  margin-top:20px;
+  margin:auto;
   box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
-
-
+  height: 150px;
+  margin-top:25px;
 }
-.card-user {
+
+.username{
   position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 40px;
-  border-radius: 50%;
-}
-.card-category {
-  position: absolute;
-  top: 10px;
   left: 10px;
-  font-size: 15px;
-  text-transform: uppercase;
-}
-.card-description {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-}
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description  p {
-  font-size: 10px;
-  opacity: 0.7;
-  font-weight: lighter;
-
+  :hover{
+    text-decoration:none;
+  }
 
 }
-.card-link {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  z-index: 2;
-  background: black;
-  opacity: 0;
-}
-.card-link:hover {
-  opacity: 0.1;
+
+.tweet-content{
+  position:absolute;
+  top:60px;
+  left:10px;
 }
 
-.card-description .tweet-content{
-  font-size:20px;
+.date{
+  position:absolute;
+  top:18px;
+  font-size: 12px;
+  left: 330px;
 }
 
-.card-description h4 :hover{
-  text-decoration: none;
-}
-
-i{
-  // padding-left: 10px;
-}
 
 .icons{
-display: flex;
-font-size: 13px;
-justify-content:space-between;
-:hover{
+  position:absolute;
+  bottom:20px;
+  display:flex;
+  left:15px;
+  // justify-content:space-between;
+
+}
+.upvote{
+   padding-right: 55px;
+}
+
+
+.icons :hover{
   text-decoration:none;
 }
-}
+
 
