--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Sign up</h2>
+<h2 class="center-title">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs sign-up">
      <%= f.input :first_name,
                 required: true,
                 autofocus: true ,
@@ -29,9 +29,11 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions center-title">
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
+<div class="center-title">
 
 <%= render "devise/shared/links" %>
+</div>
