--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -129,7 +129,7 @@
 }
 
 
-.icons :hover{
+.icons :hover , .icons :hover, .icons :active, .icons :visited, .icons :focus{
   text-decoration:none;
 }
 
