--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -12,19 +12,12 @@
 
 <div id="tweets">
   <% @tweets.each do |tweet|  %>
-  <div class="card">
+  <div id="tweet-<%= tweet.id %>" class="card">
 
     <h4 class = "username"><%= link_to tweet.user.username, user_path(tweet.user) %></h4>
     <p class="tweet-content"><%= tweet.content %></p>
     <p class="date"><%= tweet.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
-    <div class="icons">
-      <%= link_to like_tweet_path(tweet),  method: :put do %>
-      <div class="upvote"><i class="fas fa-thumbs-up"></i> <%= tweet.get_upvotes.count %></div>
-      <% end %>
-      <%= link_to dislike_tweet_path(tweet), method: :put do %>
-      <div><i class="fas fa-thumbs-down"></i> <%= tweet.get_downvotes.count %></div>
-      <% end %>
-    </div>
+    <%= render 'icons', tweet: tweet %>
   </div>
  <% end %>
 </div>
