--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -61,13 +61,21 @@
 }
 .edit{
   position:absolute;
-  bottom:5px;
+  bottom:10px;
   right:125px;
+  border-radius:50px;
 }
 
 .delete{
   position:absolute;
-  bottom:18px;
+  bottom:10px;
   right:30px;
+  border-radius:50px;
+
 
 }
+
+
+
+
+
