--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,8 @@
                 required: true,
                 autofocus: true ,
                 input_html: { autocomplete: "Username" }%>
+     <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.input :email,
                 required: true,
                 autofocus: true ,
