--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -12,7 +12,7 @@
 <div id="tweets">
   <% @tweets.each do |tweet|  %>
   <div id="tweet-<%= tweet.id %>" class="card">
-
+    <p class="photo"><%= cl_image_tag tweet.user.photo, height: 50, width: 50, crop: :fill %></p>
     <h4 class = "username"><%= link_to tweet.user.username, user_path(tweet.user) %></h4>
     <p class="tweet-content"><%= tweet.content %></p>
     <p class="date"><%= tweet.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
@@ -31,7 +31,7 @@
             </button>
           </div>
           <div class="modal-body">
-          <%= render 'edit',user:@user, tweet:@tweeted %>
+          <%= render 'edit',user:@user, tweet:@tweet %>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
