--- a/app/views/tweets/vote.js.erb
+++ b/app/views/tweets/vote.js.erb
@@ -1,1 +1,1 @@
-$('#tweet-<%= @tweet.id %> .icons').replaceWith('<%= j render("icons", tweet: @tweet) %>');
+document.querySelector('#tweet-<%= @tweet.id %> .icons').outerHTML = '<%= j render("icons", tweet: @tweet) %>';
