--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="profile-title"><%= @user.username  %> </h1>
+<h1 class="profile-title text-primary"><%= @user.username  %> </h1>
 <div class="avatar-show">
   <%= cl_image_tag @user.photo, height: 200, width: 200, crop: :fill %>
 
