fixed pudit issue when search added

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,13 +7,15 @@
 <% end %>
 <br>
 
-<%#= form_tag tweets_path, method: :get do %>
-  <%#= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find a tweet or user"
-  %>
-<%# end %>
+<div class="search">
+  <%= form_tag tweets_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Find a tweet or user"
+    %>
+  <% end %>
+</div>
 
 <div id="tweets">
   <% @tweets.each do |tweet|  %>
