--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,10 +23,15 @@
 }
 
 /* Right section */
-.navbar-wagon-right {
+.navbar-right {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /*justify-content: flex-end;*/
+  margin-left:650px;
+}
+.navbar-username{
+  margin-left:40px;
+  /*font-family: sans-serif;*/
 }
 
 /* Basic navbar item */
