--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,8 +1,9 @@
 .search{
-width:500px;
+width:250px;
 // margin:auto;
 position:relative;
-  margin: auto;
+  // margin: auto;
+
 
 i {
 position:absolute;
