--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,27 +5,31 @@
   <% end %>
 
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
+  <!-- <div class="navbar-wagon-right hidden-xs hidden-sm"> -->
 
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
+<div class="navbar-right">
+
       <div class="search">
-      <%= form_tag tweets_path, method: :get do %>
+        <%= form_tag tweets_path, method: :get do %>
+        <%= text_field_tag :query,
+        params[:query],
+        class: "form-control form-curve",
+        placeholder:  "Find a tweet or user"%>
+        <i class="fas fa-search search-icon"></i>
+        <% end %>
+      </div>
 
+      <div class="navbar-username text-primary">
+        <%= current_user.username %>
+      </div>
 
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control form-curve",
-      placeholder:  "Find a tweet or user"
-    %>
-    <i class="fas fa-search search-icon"></i>
-  <% end %>
 </div>
-      <%= current_user.username %>
-      <%= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%#= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%#= link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%#= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
@@ -54,7 +58,7 @@
       <!-- Login link (when logged out) -->
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
-  </div>
+  <!-- </div> -->
 
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
