--- a/app/assets/stylesheets/components/_news.scss
+++ b/app/assets/stylesheets/components/_news.scss
@@ -1,12 +1,8 @@
 .news-card{
   width:300px;
 background-color: white;
-border-radius: 10px;
+// border-radius: 10px;
   box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+font-size: 15px;
 }
 
-.flex-box{
-  display:flex;
-  justify-content:center;
-}
