--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -70,20 +70,45 @@
   <h3 class="text-primary sides-title">Explore</h3>
   <% @users.each do |user| %>
   <div class="user_card">
-     <p class="user_username"><%= link_to user.username, user_path(user) %></p>
+     <p class="user_username text-primary"><%= user.username %></p>
      <%=  cl_image_tag user.photo, height: 60, width: 60, crop: :fill, class: "user_photo" %>
+     <%= link_to "Check'em out!", user_path(user), class: "user_button" %>
+
   </div>
 
     <% end %>
 </div>
-
-
-
-
-
-
-
-
-
-
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
