--- a/app/assets/stylesheets/components/_who_to_follow.scss
+++ b/app/assets/stylesheets/components/_who_to_follow.scss
@@ -9,13 +9,13 @@
 
 }
 
-.user_username{
+.users_username{
   position:absolute;
   top:15px;
   right:130px;
 }
 
-.user_photo{
+.users_photo{
 position: absolute;
 top:20px;
 left:15px;
