--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,13 @@
 <h1 class="profile-title text-primary"><%= @user.username  %> </h1>
 <div class="avatar-show">
   <%= cl_image_tag @user.photo, height: 200, width: 200, crop: :fill %>
-
 </div>
 
+<% if current_user.following(@user) %>
+  <%= button_to "Following", {action: "unfollow", id: @user.id}, method: "post", class: "btn btn-secondary btn_unfollow", remote: true %>
+<% elsif current_user != @user %>
+  <%= button_to "Follow", {action: "follow", id: @user.id}, method: "post", class: "btn btn-primary btn_follow", remote: true %>
+<% end %>
 
 <div id="tweets">
   <% @tweets.each do |tweet|  %>
@@ -13,8 +17,6 @@
     <p class="tweet-content"><%= tweet.content %></p>
     <p class="date"><%= tweet.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
     <p class = "icons">Upvotes <%= tweet.get_upvotes.size %> | Downvotes <%= tweet.get_downvotes.size %></p>
-
-
  <% end %>
 </div>
 
