--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <%= cl_image_tag @user.photo, height: 200, width: 200, crop: :fill %>
 </div>
 
-<% if current_user.following(@user) %>
+# <% if current_user.following?(@user) %>
   <%= button_to "Following", {action: "unfollow", id: @user.id}, method: "post", class: "btn btn-secondary btn_unfollow", remote: true %>
 <% elsif current_user != @user %>
   <%= button_to "Follow", {action: "follow", id: @user.id}, method: "post", class: "btn btn-primary btn_follow", remote: true %>
