--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 
 
  <% if current_user.following?(@user) %>
-  <%= button_to "Following", {action: "unfollow", id: @user.id}, method: "post", class: "btn btn-secondary btn_unfollow"%>
+  <%= button_to "Following", params:{action: "unfollow", id: @user.id}, method: "post", class: "btn btn-secondary btn_unfollow"%>
 <% else  %>
   <%= button_to "Follow", {action: "follow", id: @user.id}, method: "post", class: "btn btn-primary btn_follow" %>
 <% end %>
