--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -3,7 +3,41 @@
   margin: auto;
 }
 
+.sign-up-flex{
+
+  display:flex;
+}
 
 .center-title{
   text-align: center;
+}
+
+.background-world{
+  width: 100%;
+height: calc(100vh - 70px);
+// background-repeat: no-repeat;
+ -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  // background-size: cover;
+}
+
+.login-title{
+margin-top:0;
+padding-top: 50px;
+color: white;
+}
+
+.background-snow{
+  width: 100%;
+height: 100%;
+// background-repeat: no-repeat;
+ // -webkit-background-size: cover;
+ //  -moz-background-size: cover;
+ //  -o-background-size: cover;
+  background-size: cover;
+}
+
+.form-inputs{
+  color:white;
 }
