changed background of login and sign up'

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -3,10 +3,11 @@
   margin: auto;
 }
 
-.sign-up-flex{
+// .sign-up-flex{
 
-  display:flex;
-}
+//   display:flex;
+//   justify-content:space-around;
+// }
 
 .center-title{
   text-align: center;
@@ -40,4 +41,7 @@ height: 100%;
 
 .form-inputs{
   color:white;
+  // width: 50px;
 }
+
+
