fixed background issue

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="background-snow" style="background-image: url(<%= image_path "treemoon.jpeg" %>);">
+<div class="background-signup" style="background-image: url(<%= image_path "snow.jpeg" %>);">
 
 
 <h2 class="center-title login-title">Sign up</h2>
