--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -13,14 +13,16 @@
   text-align: center;
 }
 
-.background-world{
+.background-signup{
   width: 100%;
-height: calc(100vh - 70px);
+// height: calc(100vh - 70px);
+height: 100%;
+
 // background-repeat: no-repeat;
  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  // background-size: cover;
+  background-size: cover;
 }
 
 .login-title{
@@ -29,13 +31,14 @@ padding-top: 50px;
 color: white;
 }
 
-.background-snow{
+.background-login{
   width: 100%;
-height: 100%;
+height: calc(100vh - 70px);
+// height: 100vh;
 // background-repeat: no-repeat;
- // -webkit-background-size: cover;
- //  -moz-background-size: cover;
- //  -o-background-size: cover;
+ -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
@@ -43,5 +46,11 @@ height: 100%;
   color:white;
   // width: 50px;
 }
+
+@media only screen and (min-width: 2000px) {
+        .background-signup{
+           height:100vh;
+              }
+            }
 
 
