--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,14 +6,13 @@
   <h3 class="text-primary sides-title">Top News</h3>
     <div class="news-card">
   <% @articles["articles"].each do |article| %>
-        <p class="card-title"><%= article["title"] %></p>
+    <p class="card-title"><%= article["title"] %></p>
   <% end %>
     </div>
 </div>
 
 <div>
 <% if policy(Tweet).create? %>
-
   <div class="tweet-form">
       <%= render 'new',user:@user, tweet:@tweet %>
   </div>
@@ -29,29 +28,8 @@
     <p class="date"><%= tweet.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
     <%= render 'icons', tweet: tweet %>
     <% if policy(tweet).edit? %>
-    <button type="button" class="btn btn-primary edit" data-toggle="modal" data-target="#exampleModalCenter">
-      edit
-    </button>
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-          <%= render 'edit',user:@user, tweet:@tweet %>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-      <!-- <p class="edit"> <%= link_to "Edit", edit_tweet_path(tweet) %></p> -->
+
+      <p class="edit"> <%= link_to "Edit", edit_tweet_path(tweet) %></p>
     <% end %>
     <% if policy(tweet).destroy? %>
       <p class="destroy"><%= link_to "Delete",  tweet_path(tweet),method: :delete, data: { confirm: "Are you sure?" }, class: "delete btn btn-primary"%> </p>
